--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,43 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+  font-family: 'ZodiakItalic';
+  src: url('/fonts/Zodiak-Italic.woff2') format('woff2'),
+       url('/fonts/Zodiak-Italic.woff') format('woff'),
+       url('/fonts/Zodiak-Italic.ttf') format('truetype');
+  font-weight: 400;
+  font-display: swap;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'ZodiakLight';
+  src: url('/fonts/Zodiak-Light.woff2') format('woff2'),
+       url('/fonts/Zodiak-Light.woff') format('woff'),
+       url('/fonts/Zodiak-Light.ttf') format('truetype');
+  font-weight: 300;
+  font-display: swap;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'ZodiakLightItalic';
+  src: url('/fonts/Zodiak-LightItalic.woff2') format('woff2'),
+       url('/fonts/Zodiak-LightItalic.woff') format('woff'),
+       url('/fonts/Zodiak-LightItalic.ttf') format('truetype');
+  font-weight: 300;
+  font-display: swap;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'ZodiakRegular';
+  src: url('/fonts/Zodiak-Regular.woff2') format('woff2'),
+       url('/fonts/Zodiak-Regular.woff') format('woff'),
+       url('/fonts/Zodiak-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-display: swap;
+  font-style: normal;
+}
