--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -41,3 +41,13 @@
   font-display: swap;
   font-style: normal;
 }
+
+.bg-header {
+  background: url(https://picsum.photos/1920/1920/?random) center center no-repeat;
+  background-attachment: fixed;
+}
+
+.bg-quote {
+  background: url(https://picsum.photos/1600/1600/?random) center center no-repeat;
+  background-attachment: fixed;
+}
